Fix sidebar overlap in units analysis page.

--- a/client/app/reporting/reporting.scss
+++ b/client/app/reporting/reporting.scss
@@ -1,11 +1,10 @@
 .br-mailbox-list {
   left: auto !important;
   width: auto !important;
-  z-index: aut !important;
 }
 
 .reporting-unit-body {
-  margin-left: 220px !important;
+  margin-left: 300px !important;
 }
 
 .progress-bar-step {
